--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ header {
 }
 
 .header__logo {
-    height: 65px;
     padding-left: 80px;
 }
 
@@ -59,6 +58,11 @@ header {
     font-weight: 500;
     font-size: 80px;
     line-height: 80px;
+}
+
+.big-title__image {
+    width: 100%;
+    padding: 20px 0;
 }
 
 .vr-content {
