--- a/style.css
+++ b/style.css
@@ -68,8 +68,85 @@ header {
     padding: 20px 0;
 }
 
+.welcome__illustration {
+    display: flex;
+    /* justify-content: flex-end; */
+}
+
 .welcome__girl-illustration {
+    /* padding-left: auto; */
+    width: 100%;
+    position: relative;
+    right: 0;
+}
+
+.welcome__second-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.welcome__menu {
+    margin-top: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    flex-direction: column;
+}
+
+.welcome__menu-text {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 30px;
+    /* or 130% */
+    text-align: center;
     
+    max-width: 368px;
+}
+
+.welcome__dropdown {
+    position: relative;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 10px;
+
+    width: 268px;
+    height: 45px;
+
+    background: #FB7D3D;
+    border-radius: 30px;
+
+    cursor: pointer;
+}
+
+
+.welcome__dropdown-arrow {
+    position: absolute;
+    right: 0;
+    top: -2px;
+
+    z-index: 2;
+}
+
+.welcome_dropdown-content {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 223px;
+
+    background: #FB7D3D;
+    position: relative;
+    top: 70px;
+    z-index: 1;
 }
 
 .vr-content {
@@ -80,4 +157,9 @@ header {
 .vr-content-1 {
     width: 100%;
     height: 100%;
+}
+
+.l-flex {
+    display: flex;
+    align-content: center;
 }
