--- a/style.css
+++ b/style.css
@@ -149,6 +149,18 @@ header {
     z-index: 1;
 }
 
+.welcome__dropdown-link {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    /* identical to box height, or 150% */
+
+
+    color: #FFFFFF;
+}
+
 .vr-content {
     width: 100%;
     height: 800px;
