--- a/style.css
+++ b/style.css
@@ -256,7 +256,8 @@ header {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 500;
-    font-size: 15px;
+    /* font-size: 15px; */
+    font-size: 17px;
     line-height: 30px;
     /* text-align: center; */
 }
