--- a/style.css
+++ b/style.css
@@ -136,6 +136,8 @@ header {
     text-align: center;
     
     max-width: 368px;
+
+    padding: 0 10px;
 }
 
 .welcome__dropdown {
@@ -227,6 +229,9 @@ header {
 .about-us {
     background-color: #0F0F0F;
     padding-bottom: 200px;
+
+    position: relative;
+    overflow: hidden;
 }
 
 .about-us__content {
@@ -258,6 +263,31 @@ header {
 
 .about-us__image {
     width: 100%;
+}
+
+.about-us__spot-top {
+    width: 400px;
+
+    position: absolute;
+    left: 0;
+    top: -200px;
+}
+
+.about-us__spot-bottom {
+    width: 400px;
+
+    position: absolute;
+    right: 0px;
+    bottom: -200px;
+    rotate: -180deg;
+}
+
+.separator {
+    width: 100vw;
+    height: 4px;
+    background-color: #FE3C75;
+    position: absolute;
+    bottom: 0;
 }
 
 
@@ -332,6 +362,10 @@ header {
     }
 
     .welcome__background-text-container {
+        display: none;
+    }
+
+    .about-us__spot-top {
         display: none;
     }
 }
