--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.go-up-button {
+    position: fixed;
+    right: 20px;
+    bottom: 10px;
+
+    z-index: 2000;
+}
+
 header {
     background-color: #1A1A1A;
     display: flex;
@@ -185,7 +193,7 @@ header {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 30px;
     /* identical to box height, or 150% */
 
@@ -340,7 +348,7 @@ header {
 @media screen and (max-width: 1000px) {
 
     .about-us__text {
-        font-size: 14px;
+        font-size: 13px;
     }
 
     
